fixed up/down spacing

--- a/app/assets/stylesheets/index.css.sass
+++ b/app/assets/stylesheets/index.css.sass
@@ -14,15 +14,12 @@ div.jumbotron
 .navbar span, .jumbotron span, .info_blocks span
   color: #36F
 
-
-
-
 .col-md-4
   max-width: 30%
   margin-left: 3%
 
 div.info_blocks
-  height: 550px
+  height: 525px
 
 div.info_blocks h4
   font-size: 4em
@@ -32,12 +29,10 @@ div.info_blocks p
   font-size: 2em
   font-weight: 200
 
-
-
 a.bubbles
   height: 80px
   border-radius: 40px
   line-height: 70px
   font-size: 3em
   max-width: 40%
-  margin: 0 5% 50px 5%
+  margin: 0 5% 70px 5%
